--- a/build.gradle
+++ b/build.gradle
@@ -8,9 +8,10 @@ buildscript {
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.2'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.android.tools.build:gradle:7.3.1'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.20"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.0-alpha04"
+        classpath 'androidx.navigation:navigation-safe-args-gradle-plugin:2.3.5'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
