--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:7.3.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.20"
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.6.0-alpha04"
+        //classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.6.0-alpha04"
         classpath 'androidx.navigation:navigation-safe-args-gradle-plugin:2.5.3'
 
         // NOTE: Do not place your application dependencies here; they belong
